test/parser/valid/_custom/interface_with_content.java
public interface InterfaceWithContent {
    public int a;
    // public void m();
    // private int d();
}
