test/parser/bad/_custom/interface_method_body.java
public interface InterfaceMethodBody {
    public void m() {}
}
